infrastructure/auth/basic-auth-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: auth
spec:
  forwardAuth:
    address: http://basic-auth.auth.svc.cluster.local/
