infrastructure/auth/traefik-forward-auth-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
  namespace: traefik
spec:
  forwardAuth:
    address: http://traefik-forward-auth.traefik.svc.cluster.local:4181
    trustForwardHeader: true
    maxResponseBodySize: 2097152
    authResponseHeaders:
      - X-User
