infrastructure/auth/traefik-forward-auth-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  namespace: traefik
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: traefik-forward-auth
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: traefik-forward-auth
      containers:
        - name: traefik-forward-auth
          image: thomseddon/traefik-forward-auth:2.2.0
          ports:
            - containerPort: 4181
              name: http
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 128Mi
          livenessProbe:
            tcpSocket:
              port: 4181
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 4181
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 10
