infrastructure/auth/basic-auth-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: basic-auth
  namespace: auth
spec:
  selector:
    app: basic-auth
  ports:
    - name: http
      port: 80
      targetPort: 8080
