infrastructure/auth/oauth2-proxy-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy
  namespace: auth
  annotations:
    external-dns.alpha.kubernetes.io/expose: "true"
    external-dns.alpha.kubernetes.io/target: traefik.i.recompiled.org
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`oauth.i.recompiled.org`)
      kind: Rule
      services:
        - name: oauth2-proxy
          port: 4180
  tls:
    secretName: oauth-tls
